manifests/chatbot-tranining.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatbot-training
  namespace: chatbot
  labels:
    app: chatbot-training
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chatbot-training
  template:
    metadata:
      labels:
        app: chatbot-training
    spec:
      containers:
        - name: chatbot-training
          image: docker.io/umesh1212/chatbot-traininig:v1
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "100Mi"
              cpu: "100m"
            requests:
              memory: "25Mi"
              cpu: "25m"
---
apiVersion: v1
kind: Service
metadata:
  name: chatbot-training
  namespace: chatbot
spec:
  selector:
    app: chatbot-training
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
