manifests/chatbot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatbot
  namespace: chatbot
  labels:
    app: chatbot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chatbot
  template:
    metadata:
      labels:
        app: chatbot
    spec:
      containers:
        - name: chatbot
          image: docker.io/umesh1212/chatbot:v4
          ports:
            - containerPort: 8501
          resources:
            limits:
              memory: "300Mi"
              cpu: "300m"
            requests:
              memory: "25Mi"
              cpu: "25m"
---
apiVersion: v1
kind: Service
metadata:
  name: chatbot
  namespace: chatbot
spec:
  selector:
    app: chatbot
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8501
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chatbot-ingress
  namespace: chatbot
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/enable-websocket: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - chatbot.do.umeshkhatiwada.com.np
      secretName: chatbot-tls
  rules:
    - host: chatbot.do.umeshkhatiwada.com.np
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chatbot
                port:
                  number: 80  # The internal service port
